--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Depoly to github page
         run: |
           pip install mkdocs-material
-          mkdoc gh-deploy
+          mkdocs gh-deploy
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
