--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: deploy to github page
+name: deploy-to-github-page
 
 # Controls when the workflow will run
 on:
