--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -30,10 +30,4 @@ jobs:
       - name: Depoly to github page
         run: |
           pip install mkdocs-material
-          mkdocs gh-deploy
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          mkdocs gh-deploy --force
